charts/keycloak/test/02-ingress-routing/01-stack-assert.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
status:
  readyReplicas: 1
  availableReplicas: 1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
spec:
  ingressClassName: nginx
  rules:
    - host: admin.keycloak.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-http
                port:
                  number: 8080
    - host: accounts.keycloak.test
      http:
        paths:
          - path: /js/
            pathType: Prefix
          - path: /realms/
            pathType: Prefix
          - path: /resources/
            pathType: Prefix
          - path: /robots.txt
            pathType: Prefix
