charts/keycloak/test/02-ingress-routing/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: ingress-routing
spec:
  timeouts:
    apply: 30s
    assert: 8m
    cleanup: 2m
  steps:
    - name: Apply bootstrap-admin Secret
      try:
        - apply:
            file: ./00-bootstrap-secret.yaml

    - name: Install the cnpg-cluster + keycloak stack with ingress enabled
      try:
        - script:
            content: |
              set -eu
              helm upgrade --install keycloak-db "${CHART_DIR}/../cnpg-cluster" \
                --namespace "${NAMESPACE}" \
                --values ./01-cnpg-values.yaml \
                --wait --timeout 8m
              helm upgrade --install keycloak "${CHART_DIR}" \
                --namespace "${NAMESPACE}" \
                --values ./01-keycloak-values.yaml \
                --wait --timeout 8m
        - assert:
            file: ./01-stack-assert.yaml
      catch:
        - describe:
            apiVersion: networking.k8s.io/v1
            kind: Ingress
        - describe:
            apiVersion: apps/v1
            kind: Deployment
        - podLogs:
            selector: app=keycloak
